<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="moveThirdActivity"
            android:text="@string/btnImage" />

        <Button
            android:id="@+id/btnMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="moveSecondActivity"
            android:text="@string/buttonMusic" />

        <Button
            android:id="@+id/btnOption"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="moveInputActivity"
            android:text="@string/option" />
    </LinearLayout>

</LinearLayout>